# streamlit-pyinstaller-example

./: .gitignore  README.md  pyproject.toml  run_main.spec
app/: build.ps1  geohash.py  main.py
app/pages/: page2.py
streamlit_app/: __init__.py  main.py
streamlit_app/pages/: page1.py
streamlit_pyinstaller/: run_main.py
streamlit_pyinstaller/hooks/: hook-streamlit.py  hook-streamlit_folium.py
