[tool.poetry]
name = "streamlit-example"
version = "0.1.0"
description = ""
authors = ["Hiroaki Kataoka <k_hir@hotmail.com>"]
packages = [{include = "streamlit_app"}]

[tool.poetry.dependencies]
python = "^3.11,<3.13"
geopandas = "^0.13.0"
overpy = "^0.7"
pandas = "^2.2.3"
streamlit = "^1.24.0"
streamlit-folium = "^0.23.0"
pefile = "<2024.8.26"


[tool.poetry.group.dev.dependencies]
pyinstaller = "^6.10.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 100
